# liquidity-module-self-integration

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: pr-template.md
modules/: myprotocol_liquidity_module.py  renegade_liquidity_module.py
modules/renegade/: client.py  http.py  types.py
templates/: liquidity_module.py
tests/: test_liquidity_module.py
